<resources>
    <string name="app_name">EcoTech</string>
    <string name="invalidEmail">Format Email tidak sesuai</string>
    <string name="sign_in">SIGN IN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="sign_up_page">SIGN UP</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="invalidPassword">Password minimal 8 karakter</string>
</resources>